# cross-dataset-discovery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.txt  check_db_access.py  create_index.sh  pyproject.toml
.github/workflows/: code-metrics-on-demand.yml  code-scan-on-demand.yml  codeql.yml  docker-publish.yml  test-on-demand.yml  vulnerability-scan-on-demand.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/api-overview/: index.html
0.0.1/architecture/: index.html
0.0.1/automations/: index.html
0.0.1/configuration/: index.html
0.0.1/datastore/: index.html
0.0.1/deployment/: index.html
0.0.1/error-codes/: index.html
0.0.1/faq/: index.html
0.0.1/license/: index.html
0.0.1/logging/: index.html
0.0.1/maintenance/: index.html
0.0.1/onboarding/: index.html
0.0.1/openapi/: index.html
0.0.1/qa/: index.html
0.0.1/search/: search_index.json
0.0.1/security/: index.html
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/api-overview/: index.html
0.0.2/architecture/: index.html
0.0.2/automations/: index.html
0.0.2/configuration/: index.html
0.0.2/datastore/: index.html
0.0.2/deployment/: index.html
0.0.2/error-codes/: index.html
0.0.2/faq/: index.html
0.0.2/license/: index.html
0.0.2/logging/: index.html
0.0.2/maintenance/: index.html
0.0.2/onboarding/: index.html
0.0.2/openapi/: index.html
0.0.2/qa/: index.html
0.0.2/search/: search_index.json
0.0.2/security/: index.html
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/api-overview/: index.html
0.0.3/architecture/: index.html
0.0.3/automations/: index.html
0.0.3/configuration/: index.html
0.0.3/datastore/: index.html
0.0.3/deployment/: index.html
0.0.3/error-codes/: index.html
0.0.3/faq/: index.html
0.0.3/license/: index.html
0.0.3/logging/: index.html
0.0.3/maintenance/: index.html
0.0.3/onboarding/: index.html
0.0.3/openapi/: index.html
0.0.3/qa/: index.html
0.0.3/search/: search_index.json
0.0.3/security/: index.html
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/api-overview/: index.html
0.0.4/architecture/: index.html
0.0.4/automations/: index.html
0.0.4/configuration/: index.html
0.0.4/datastore/: index.html
0.0.4/deployment/: index.html
0.0.4/error-codes/: index.html
0.0.4/faq/: index.html
0.0.4/license/: index.html
0.0.4/logging/: index.html
0.0.4/maintenance/: index.html
0.0.4/onboarding/: index.html
0.0.4/openapi/: index.html
0.0.4/qa/: index.html
0.0.4/search/: search_index.json
0.0.4/security/: index.html
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/api-overview/: index.html
0.0.5/architecture/: index.html
0.0.5/automations/: index.html
0.0.5/configuration/: index.html
0.0.5/datastore/: index.html
0.0.5/deployment/: index.html
0.0.5/faq/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
docs/: index.md  modules.md
search_api/: auth_config.py  database.py  environment.yml  exceptions.py  logging_config.py  main.py  models.py  requirements.txt  search_logic.py  security.py
tests/: cross-dataset-discovery-api-tests.postman_collection.json  test_foo.py
(+144 files in other folders)
